--- a/ComputerShare_Demo.csproj
+++ b/ComputerShare_Demo.csproj
@@ -120,6 +120,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="DemoFiles\" />
     <Folder Include="Style\" />
   </ItemGroup>
   <PropertyGroup>
