--- a/ComputerShare_Demo.csproj
+++ b/ComputerShare_Demo.csproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="DemoFiles\" />
+    <Folder Include="favicon\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
